# uauth_qt

./: CMakeLists.txt  Version.h.in
buildScripts/linux/: buildUbuntu18.sh  buildUbuntu22.sh
buildScripts/win32/: buildWin32.bat  buildWin64.bat
doc/: curl.txt
lib/qthttp/: CMakeLists.txt
lib/qthttp/src/: main.cpp
lib/qthttp/src/httpserver/: qabstracthttpserver.cpp  qabstracthttpserver.h  qhttpserver.cpp  qhttpserver.h  qhttpserverliterals_p.h  qhttpserverrequest.cpp  qhttpserverrequest.h  qhttpserverrequest_p.h  qhttpserverresponder.cpp  qhttpserverresponder.h  qhttpserverresponder_p.h  qhttpserverresponse.cpp  qhttpserverresponse.h  qhttpserverresponse_p.h  qhttpserverrouter.cpp  qhttpserverrouter.h  qhttpserverrouterrule.cpp  qhttpserverrouterrule.h  qhttpserverrouterrule_p.h  qthttpserverglobal.h
lib/qthttp/src/sslserver/: qsslserver.cpp  qsslserver.h  qtsslserverglobal.h
uaRequester/: CMakeLists.txt  Defines.h
uaRequester/src/: main.cpp
uaRequester/src/gui/: MainWindow.cpp  MainWindow.h
uaRequester/src/network/: HttpClient.cpp  HttpClient.h
uaServer/: CMakeLists.txt
uaServer/src/: Bootloader.cpp  Bootloader.h  Defines.h  main.cpp
uaServer/src/crypto/: CryptoGenerator.cpp  CryptoGenerator.h
uaServer/src/http/: HttpClient.cpp  HttpClient.h  HttpLiterals.cpp  HttpLiterals_p.h  HttpRequest.cpp  HttpRequest.h  HttpRequest_p.h  HttpResponder.cpp  HttpResponder.h  HttpResponder_p.h  HttpResponse.cpp  HttpResponse.h  HttpResponse_p.h  HttpRouter.cpp  HttpRouter.h  HttpRouterRule.cpp  HttpRouterRule.h  HttpRouterRule_p.h  HttpRouterViewTraits.h  HttpRouter_p.h  HttpServer.cpp  HttpServer.h
uaServer/src/postgres/: SQL_Handler.cpp  SQL_Handler.h
uaServer/src/ucontrol/: Controller.cpp  Controller.h
uaShell/: CMakeLists.txt
uaShell/src/: main.cpp
uaTables/: CMakeLists.txt
uaTables/src/: Defines.h  main.cpp
